# auto_diff

./: .gitignore  LICENSE  LICENSE.md  README.md  Untitled.ipynb  enochtest.ipynb  expression.py  ops.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  test.yml
docs/: documentation.ipynb  dual.md  milestone1.ipynb  milestone1.md  milestone2.ipynb  milestone2_progress.md
docs/.ipynb_checkpoints/: milestone1-checkpoint.ipynb  milestone1.ipynb copy
docs/source/: auto_diff.dual.rst  auto_diff.expression.rst  auto_diff.rst  conf.py  index.rst  modules.rst
src/: __init__.py  dual.py  expression.py  ops.py
src/auto_diff/: __init__.py
src/auto_diff/dual/: __init__.py  dual.py
src/auto_diff/expression/: __init__.py  expression.py  function.py  node.py  ops.py  variable.py
src/auto_diff_CGLLY/: __init__.py
src/auto_diff_CGLLY/dual/: __init__.py  dual.py
src/auto_diff_CGLLY/expression/: expression.py  ops.py
src/expression/: __init__.py  expression.py  ops.py
tests/: .coverage  check_coverage.sh  expression_test.py  run_test.sh  run_tests.sh
tests/dual/: dual_test.py
tests/expression/: compose_test.py  expression_test.py  function_test.py  ops_test.py  variable_test.py
tests/optimization/: optimization_demo.py
